--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,19 @@
     padding: 0;
 }
 
+/*----Nav bar----*/
+#collapse-button {
+    width: auto;
+}
+
+#nav-list{
+    display: flex;
+    justify-content: center;
+}
+
+#nav-basket > i {
+    float: right;
+}
 /*-----Hero section----*/
 
 #hero-section {
@@ -11,4 +24,20 @@
 
 #hero-image {
     width: 100vw;
+}
+
+
+/*----Collapsed nav-bar----*/
+
+@media (max-width: 992px) {
+    #nav-basket > i {
+        float: none;
+    }
+
+    #navbarTogglerDemo02 {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-left: 0.2rem;
+    }
 }
