--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,14 +59,6 @@
     width: 75%;
 }
 
-/*----About Cards----*/
-#about-page-text {
-
-}
-
-.about-card {
-    height: 250px;
-}
 
 /*----About footer image----*/
 #about-footer-image {
@@ -75,6 +67,19 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+
+/*----History Image Section----*/
+.history-image {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    padding: 20px;
+}
+
+.history-paragraph {
+    padding: 20px;
 }
 
 /*----Footer----*/
