--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,20 @@
     float: right;
 }
 
+/*----Modal----*/
+.modal-title {
+    width: 100%;
+    text-align: center;
+}
+
+/* .modal-form-input {
+    height: 33.33%;
+} */
+
+.modal-form-col {
+
+}
+
 /*-----Hero section----*/
 
 #hero-section {
@@ -42,7 +56,7 @@
     top: 150px;
     position: relative;
     align-content: center;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 
