--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,30 @@
 /*----Home Form Section----*/
 #home-contact-form {
     width: 75%;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+
+#optional {
+    font-size: smaller;
+}
+
+.fade-in {
+	opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 1s;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
 /*----About page main----*/
