--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,11 @@
     padding: 0;
 }
 
+a:link,
+a:visited {
+    color: inherit;
+    text-decoration: none; 
+}
 /* .row {
     margin-right: 0;
 } */
@@ -24,6 +29,7 @@
 
 #nav-basket>i {
     float: right;
+    cursor: pointer;
 }
 
 /*----Modal----*/
@@ -37,7 +43,7 @@
 
 #hero-section {
     --bs-gutter-x: 0;
-    background-image: url(../images/hero-placeholder.jpg);
+    background-image: url(../images/Swords_Town_DSC0423.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -52,6 +58,10 @@
     background-color: rgba(255, 255, 255, 0.7);
 }
 
+#hero-gift-card-text {
+    text-decoration: underline;
+    cursor: pointer;
+}
 
 /*----Home About Section----*/
 #home-about-heading {
@@ -94,10 +104,31 @@
     width: 75%;
 }
 
+#about-cards-section {
+    width: 90%;
+}
+
+.card-img {
+    height: 100%;
+}
+
+.card{
+    border-radius: 4px;
+    background: #fff;
+    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
+      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+  cursor: pointer;
+}
+
+.card:hover{
+     transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
 /*----About footer image----*/
 #about-footer-image {
-    height: 300px;
-    background-image: url(../images/hero-placeholder.jpg);
+    height: 500px;
+    background-image: url(../images/swords-castle-long-pic.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -179,9 +210,9 @@ footer {
     }
 
     /*----About Cards----*/
-    .about-card {
+    /* .about-card {
         width: 50%;
-    }
+    } */
 
     /*----About page main----*/
     #about-page-text {
