--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,12 +112,18 @@ a:visited {
     height: 100%;
 }
 
+.about-card-text{
+    background-color: rgba(255, 255, 255, 0.7);
+    color: black;
+    border-radius: 5px;
+    padding: 3.5px;
+}
+
 .card{
     border-radius: 4px;
     background: #fff;
     box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
       transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
-  cursor: pointer;
 }
 
 .card:hover{
