--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,51 @@
     padding: 0;
 }
 
+body {
+    font-family: Calibri;
+    color: #212121;
+    /* font-size: larger;
+    font-weight: 600;  */
+}
+
+.light-blue {
+    background-color: rgba(159, 192, 224, 0.25);
+}
+
+nav {
+    background-color: rgba(159, 192, 224, 0.25) !important;
+}
+
+
+.nav-link {
+    font-size: larger;
+    font-weight: bolder;
+}
+
+.nav-link:focus,
+.nav-link:hover {
+    background-color: white;
+}
+
+footer {
+    background-color: rgba(159, 192, 224, 0.25);
+    margin: 0 !important;
+    padding: 15px;
+}
+
+footer>p {
+    margin-bottom: 0;
+}
+
+
 a:link,
 a:visited {
-    color: inherit;
-    text-decoration: none; 
+    text-decoration: none;
 }
-/* .row {
-    margin-right: 0;
-} */
+
+.row {
+    --bs-gutter-x: 0;
+}
 
 /*----Nav bar----*/
 
@@ -30,6 +67,7 @@ a:visited {
 #nav-basket>i {
     float: right;
     cursor: pointer;
+    font-size: larger;
 }
 
 /*----Modal----*/
@@ -63,9 +101,19 @@ a:visited {
     cursor: pointer;
 }
 
+#scroller-arrow {
+    color: inherit;
+}
+
 /*----Home About Section----*/
 #home-about-heading {
     margin-top: 5rem;
+}
+
+
+
+.home-card-img {
+    height: 50%;
 }
 
 
@@ -83,20 +131,21 @@ a:visited {
 }
 
 .fade-in {
-	opacity: 1;
-	animation-name: fadeInOpacity;
-	animation-iteration-count: 1;
-	animation-timing-function: ease-in;
-	animation-duration: 1s;
+    opacity: 1;
+    animation-name: fadeInOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 1s;
 }
 
 @keyframes fadeInOpacity {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 /*----About page main----*/
@@ -112,23 +161,23 @@ a:visited {
     height: 100%;
 }
 
-.about-card-text{
+.about-card-text {
     background-color: rgba(255, 255, 255, 0.7);
     color: black;
     border-radius: 5px;
     padding: 3.5px;
 }
 
-.card{
+.card {
     border-radius: 4px;
     background: #fff;
-    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);
+    transition: .3s transform cubic-bezier(.155, 1.105, .295, 1.12), .3s box-shadow, .3s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12);
 }
 
-.card:hover{
-     transform: scale(1.05);
-  box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
 }
 
 /*----About footer image----*/
@@ -227,8 +276,7 @@ footer {
 
 
 
-    ----Contact Details----
-     #contact-details {
+    ----Contact Details---- #contact-details {
         width: 75%;
     }
 }
